@@ -4,8 +4,6 @@
 
 - use im__inplace_base() in more places
 
-- nip2 should be able to call RW image ops by copying them, see
-  im_draw_circle_copy()
 
 
 
