@@ -43,8 +43,6 @@ int im_smudge( IMAGE *im, int ix, int iy, Rect *r );
 int im_paintrect( IMAGE *im, Rect *r, PEL *ink );
 int im_draw_circle( IMAGE *im, 
 	int cx, int cy, int radius, gboolean fill, PEL *ink );
-int im_draw_circle_copy( IMAGE *in, IMAGE *out, 
-	int cx, int cy, int radius, gboolean fill, PEL *ink );
 int im_insertplace( IMAGE *main, IMAGE *sub, int x, int y );
 int im_fastline( IMAGE *im, int x1, int y1, int x2, int y2, PEL *pel );
 int im_fastlineuser( IMAGE *im, 
@@ -56,11 +54,6 @@ int im_flood( IMAGE *im, int x, int y, PEL *ink, Rect *dout );
 int im_flood_blob( IMAGE *im, int x, int y, PEL *ink, Rect *dout );
 int im_flood_other( IMAGE *test, IMAGE *mark, 
 	int x, int y, int serial, Rect *dout );
-
-int im_flood_copy( IMAGE *in, IMAGE *out, int x, int y, PEL *ink );
-int im_flood_blob_copy( IMAGE *in, IMAGE *out, int x, int y, PEL *ink );
-int im_flood_other_copy( IMAGE *test, IMAGE *mark, IMAGE *out, 
-	int x, int y, int serial );
 
 int im_lineset( IMAGE *in, IMAGE *out, IMAGE *mask, IMAGE *ink,
 	int n, int *x1v, int *y1v, int *x2v, int *y2v );
