@@ -20,6 +20,8 @@
 - add IM_TYPE_RW flag for im__rw_image, helps nip2 auto-wrap inplace ops
 - im_insertplace() casts and bandalikes
 - copy iconv.m4 and friends in bootstrap, thanks Mike
+- moved the stupid _copy() versions of the inplace ops to deprecated, since
+  nip2 can call inplace ops directly now
 
 12/5/10 started 7.22.2
 - the conditional image of ifthenelse can be any format, a (!=0) is added if
